parser.automaton
State 0:
fichier' -> . fichier [ # ]
-- On INCLUDE shift to state 1
-- On fichier shift to state 2
-- On boption(INCLUDE) shift to state 3
-- On VOID reduce production boption(INCLUDE) -> 
-- On TINT reduce production boption(INCLUDE) -> 
-- On TIDENT reduce production boption(INCLUDE) -> 
-- On EOF reduce production boption(INCLUDE) -> 
-- On CLASS reduce production boption(INCLUDE) -> 

State 1:
boption(INCLUDE) -> INCLUDE . [ VOID TINT TIDENT EOF CLASS ]
-- On VOID reduce production boption(INCLUDE) -> INCLUDE 
-- On TINT reduce production boption(INCLUDE) -> INCLUDE 
-- On TIDENT reduce production boption(INCLUDE) -> INCLUDE 
-- On EOF reduce production boption(INCLUDE) -> INCLUDE 
-- On CLASS reduce production boption(INCLUDE) -> INCLUDE 

State 2:
fichier' -> fichier . [ # ]
-- On # accept fichier

State 3:
fichier -> boption(INCLUDE) . list(decl) EOF [ # ]
-- On VOID shift to state 4
-- On TINT shift to state 5
-- On TIDENT shift to state 6
-- On CLASS shift to state 27
-- On type_rule shift to state 56
-- On proto shift to state 73
-- On list(decl) shift to state 195
-- On decl_vars shift to state 197
-- On decl_class shift to state 198
-- On decl shift to state 199
-- On EOF reduce production list(decl) -> 

State 4:
type_rule -> VOID . [ TIMES TIDENT IDENT ECOMM ]
-- On TIMES reduce production type_rule -> VOID 
-- On TIDENT reduce production type_rule -> VOID 
-- On IDENT reduce production type_rule -> VOID 
-- On ECOMM reduce production type_rule -> VOID 

State 5:
type_rule -> TINT . [ TIMES TIDENT IDENT ECOMM ]
-- On TIMES reduce production type_rule -> TINT 
-- On TIDENT reduce production type_rule -> TINT 
-- On IDENT reduce production type_rule -> TINT 
-- On ECOMM reduce production type_rule -> TINT 

State 6:
proto -> TIDENT . paren(separated_list(COMMA,argument)) [ SEMICOLON LBRACE ]
proto -> TIDENT . COLON COLON TIDENT paren(separated_list(COMMA,argument)) [ SEMICOLON LBRACE ]
type_rule -> TIDENT . [ TIMES TIDENT IDENT ECOMM ]
-- On LPAREN shift to state 7
-- On COLON shift to state 22
-- On paren(separated_list(COMMA,argument)) shift to state 26
-- On TIMES reduce production type_rule -> TIDENT 
-- On TIDENT reduce production type_rule -> TIDENT 
-- On IDENT reduce production type_rule -> TIDENT 
-- On ECOMM reduce production type_rule -> TIDENT 

State 7:
paren(separated_list(COMMA,argument)) -> LPAREN . loption(separated_nonempty_list(COMMA,argument)) RPAREN [ SEMICOLON LBRACE ]
-- On VOID shift to state 4
-- On TINT shift to state 5
-- On TIDENT shift to state 8
-- On type_rule shift to state 9
-- On separated_nonempty_list(COMMA,argument) shift to state 16
-- On loption(separated_nonempty_list(COMMA,argument)) shift to state 17
-- On argument shift to state 19
-- On RPAREN reduce production loption(separated_nonempty_list(COMMA,argument)) -> 

State 8:
type_rule -> TIDENT . [ TIMES IDENT ECOMM ]
-- On TIMES reduce production type_rule -> TIDENT 
-- On IDENT reduce production type_rule -> TIDENT 
-- On ECOMM reduce production type_rule -> TIDENT 

State 9:
argument -> type_rule . var [ RPAREN COMMA ]
-- On TIMES shift to state 10
-- On IDENT shift to state 11
-- On ECOMM shift to state 12
-- On var shift to state 15

State 10:
var -> TIMES . var [ SEMICOLON RPAREN COMMA ASSIGN ]
-- On TIMES shift to state 10
-- On IDENT shift to state 11
-- On ECOMM shift to state 12
-- On var shift to state 14

State 11:
var -> IDENT . [ SEMICOLON RPAREN COMMA ASSIGN ]
-- On SEMICOLON reduce production var -> IDENT 
-- On RPAREN reduce production var -> IDENT 
-- On COMMA reduce production var -> IDENT 
-- On ASSIGN reduce production var -> IDENT 

State 12:
var -> ECOMM . var [ SEMICOLON RPAREN COMMA ASSIGN ]
-- On TIMES shift to state 10
-- On IDENT shift to state 11
-- On ECOMM shift to state 12
-- On var shift to state 13

State 13:
var -> ECOMM var . [ SEMICOLON RPAREN COMMA ASSIGN ]
-- On SEMICOLON reduce production var -> ECOMM var 
-- On RPAREN reduce production var -> ECOMM var 
-- On COMMA reduce production var -> ECOMM var 
-- On ASSIGN reduce production var -> ECOMM var 

State 14:
var -> TIMES var . [ SEMICOLON RPAREN COMMA ASSIGN ]
-- On SEMICOLON reduce production var -> TIMES var 
-- On RPAREN reduce production var -> TIMES var 
-- On COMMA reduce production var -> TIMES var 
-- On ASSIGN reduce production var -> TIMES var 

State 15:
argument -> type_rule var . [ RPAREN COMMA ]
-- On RPAREN reduce production argument -> type_rule var 
-- On COMMA reduce production argument -> type_rule var 

State 16:
loption(separated_nonempty_list(COMMA,argument)) -> separated_nonempty_list(COMMA,argument) . [ RPAREN ]
-- On RPAREN reduce production loption(separated_nonempty_list(COMMA,argument)) -> separated_nonempty_list(COMMA,argument) 

State 17:
paren(separated_list(COMMA,argument)) -> LPAREN loption(separated_nonempty_list(COMMA,argument)) . RPAREN [ SEMICOLON LBRACE ]
-- On RPAREN shift to state 18

State 18:
paren(separated_list(COMMA,argument)) -> LPAREN loption(separated_nonempty_list(COMMA,argument)) RPAREN . [ SEMICOLON LBRACE ]
-- On SEMICOLON reduce production paren(separated_list(COMMA,argument)) -> LPAREN loption(separated_nonempty_list(COMMA,argument)) RPAREN 
-- On LBRACE reduce production paren(separated_list(COMMA,argument)) -> LPAREN loption(separated_nonempty_list(COMMA,argument)) RPAREN 

State 19:
separated_nonempty_list(COMMA,argument) -> argument . [ RPAREN ]
separated_nonempty_list(COMMA,argument) -> argument . COMMA separated_nonempty_list(COMMA,argument) [ RPAREN ]
-- On COMMA shift to state 20
-- On RPAREN reduce production separated_nonempty_list(COMMA,argument) -> argument 

State 20:
separated_nonempty_list(COMMA,argument) -> argument COMMA . separated_nonempty_list(COMMA,argument) [ RPAREN ]
-- On VOID shift to state 4
-- On TINT shift to state 5
-- On TIDENT shift to state 8
-- On type_rule shift to state 9
-- On separated_nonempty_list(COMMA,argument) shift to state 21
-- On argument shift to state 19

State 21:
separated_nonempty_list(COMMA,argument) -> argument COMMA separated_nonempty_list(COMMA,argument) . [ RPAREN ]
-- On RPAREN reduce production separated_nonempty_list(COMMA,argument) -> argument COMMA separated_nonempty_list(COMMA,argument) 

State 22:
proto -> TIDENT COLON . COLON TIDENT paren(separated_list(COMMA,argument)) [ SEMICOLON LBRACE ]
-- On COLON shift to state 23

State 23:
proto -> TIDENT COLON COLON . TIDENT paren(separated_list(COMMA,argument)) [ SEMICOLON LBRACE ]
-- On TIDENT shift to state 24

State 24:
proto -> TIDENT COLON COLON TIDENT . paren(separated_list(COMMA,argument)) [ SEMICOLON LBRACE ]
-- On LPAREN shift to state 7
-- On paren(separated_list(COMMA,argument)) shift to state 25

State 25:
proto -> TIDENT COLON COLON TIDENT paren(separated_list(COMMA,argument)) . [ SEMICOLON LBRACE ]
-- On SEMICOLON reduce production proto -> TIDENT COLON COLON TIDENT paren(separated_list(COMMA,argument)) 
-- On LBRACE reduce production proto -> TIDENT COLON COLON TIDENT paren(separated_list(COMMA,argument)) 

State 26:
proto -> TIDENT paren(separated_list(COMMA,argument)) . [ SEMICOLON LBRACE ]
-- On SEMICOLON reduce production proto -> TIDENT paren(separated_list(COMMA,argument)) 
-- On LBRACE reduce production proto -> TIDENT paren(separated_list(COMMA,argument)) 

State 27:
decl_class -> CLASS . IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On IDENT shift to state 28

State 28:
decl_class -> CLASS IDENT . option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On COLON shift to state 29
-- On supers shift to state 35
-- On option(supers) shift to state 36
-- On LBRACE reduce production option(supers) -> 

State 29:
supers -> COLON . separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) [ LBRACE ]
-- On PUBLIC shift to state 30
-- On separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) shift to state 34

State 30:
separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC . TIDENT [ LBRACE ]
separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC . TIDENT COMMA separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) [ LBRACE ]
-- On TIDENT shift to state 31

State 31:
separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC TIDENT . [ LBRACE ]
separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC TIDENT . COMMA separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) [ LBRACE ]
-- On COMMA shift to state 32
-- On LBRACE reduce production separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC TIDENT 

State 32:
separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC TIDENT COMMA . separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) [ LBRACE ]
-- On PUBLIC shift to state 30
-- On separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) shift to state 33

State 33:
separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC TIDENT COMMA separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) . [ LBRACE ]
-- On LBRACE reduce production separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) -> PUBLIC TIDENT COMMA separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) 

State 34:
supers -> COLON separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) . [ LBRACE ]
-- On LBRACE reduce production supers -> COLON separated_nonempty_list(COMMA,preceded(PUBLIC,TIDENT)) 

State 35:
option(supers) -> supers . [ LBRACE ]
-- On LBRACE reduce production option(supers) -> supers 

State 36:
decl_class -> CLASS IDENT option(supers) . LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On LBRACE shift to state 37

State 37:
decl_class -> CLASS IDENT option(supers) LBRACE . PUBLIC COLON list(member) RBRACE SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On PUBLIC shift to state 38

State 38:
decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC . COLON list(member) RBRACE SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On COLON shift to state 39

State 39:
decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON . list(member) RBRACE SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On VOID shift to state 4
-- On VIRTUAL shift to state 40
-- On TINT shift to state 5
-- On TIDENT shift to state 6
-- On type_rule shift to state 56
-- On proto shift to state 65
-- On member shift to state 67
-- On list(member) shift to state 70
-- On decl_vars shift to state 69
-- On RBRACE reduce production list(member) -> 

State 40:
member -> VIRTUAL . proto SEMICOLON [ VOID VIRTUAL TINT TIDENT RBRACE ]
-- On VOID shift to state 4
-- On TINT shift to state 5
-- On TIDENT shift to state 6
-- On type_rule shift to state 41
-- On proto shift to state 54

State 41:
proto -> type_rule . qvar paren(separated_list(COMMA,argument)) [ SEMICOLON ]
-- On TIMES shift to state 42
-- On TIDENT shift to state 43
-- On IDENT shift to state 47
-- On ECOMM shift to state 48
-- On qvar shift to state 52
-- On qident shift to state 50

State 42:
qvar -> TIMES . qvar [ LPAREN ]
-- On TIMES shift to state 42
-- On TIDENT shift to state 43
-- On IDENT shift to state 47
-- On ECOMM shift to state 48
-- On qvar shift to state 51
-- On qident shift to state 50

State 43:
qident -> TIDENT . COLON COLON IDENT [ TIMES SEMICOLON RPAREN PLUS OR NEQ MOD MINUS LT LPAREN LEQ INCR IN GT GEQ EQ DOT DIV DECR COMMA ASSIGN ARROW AND ]
-- On COLON shift to state 44

State 44:
qident -> TIDENT COLON . COLON IDENT [ TIMES SEMICOLON RPAREN PLUS OR NEQ MOD MINUS LT LPAREN LEQ INCR IN GT GEQ EQ DOT DIV DECR COMMA ASSIGN ARROW AND ]
-- On COLON shift to state 45

State 45:
qident -> TIDENT COLON COLON . IDENT [ TIMES SEMICOLON RPAREN PLUS OR NEQ MOD MINUS LT LPAREN LEQ INCR IN GT GEQ EQ DOT DIV DECR COMMA ASSIGN ARROW AND ]
-- On IDENT shift to state 46

State 46:
qident -> TIDENT COLON COLON IDENT . [ TIMES SEMICOLON RPAREN PLUS OR NEQ MOD MINUS LT LPAREN LEQ INCR IN GT GEQ EQ DOT DIV DECR COMMA ASSIGN ARROW AND ]
-- On TIMES reduce production qident -> TIDENT COLON COLON IDENT 
-- On SEMICOLON reduce production qident -> TIDENT COLON COLON IDENT 
-- On RPAREN reduce production qident -> TIDENT COLON COLON IDENT 
-- On PLUS reduce production qident -> TIDENT COLON COLON IDENT 
-- On OR reduce production qident -> TIDENT COLON COLON IDENT 
-- On NEQ reduce production qident -> TIDENT COLON COLON IDENT 
-- On MOD reduce production qident -> TIDENT COLON COLON IDENT 
-- On MINUS reduce production qident -> TIDENT COLON COLON IDENT 
-- On LT reduce production qident -> TIDENT COLON COLON IDENT 
-- On LPAREN reduce production qident -> TIDENT COLON COLON IDENT 
-- On LEQ reduce production qident -> TIDENT COLON COLON IDENT 
-- On INCR reduce production qident -> TIDENT COLON COLON IDENT 
-- On IN reduce production qident -> TIDENT COLON COLON IDENT 
-- On GT reduce production qident -> TIDENT COLON COLON IDENT 
-- On GEQ reduce production qident -> TIDENT COLON COLON IDENT 
-- On EQ reduce production qident -> TIDENT COLON COLON IDENT 
-- On DOT reduce production qident -> TIDENT COLON COLON IDENT 
-- On DIV reduce production qident -> TIDENT COLON COLON IDENT 
-- On DECR reduce production qident -> TIDENT COLON COLON IDENT 
-- On COMMA reduce production qident -> TIDENT COLON COLON IDENT 
-- On ASSIGN reduce production qident -> TIDENT COLON COLON IDENT 
-- On ARROW reduce production qident -> TIDENT COLON COLON IDENT 
-- On AND reduce production qident -> TIDENT COLON COLON IDENT 

State 47:
qident -> IDENT . [ TIMES SEMICOLON RPAREN PLUS OR NEQ MOD MINUS LT LPAREN LEQ INCR IN GT GEQ EQ DOT DIV DECR COMMA ASSIGN ARROW AND ]
-- On TIMES reduce production qident -> IDENT 
-- On SEMICOLON reduce production qident -> IDENT 
-- On RPAREN reduce production qident -> IDENT 
-- On PLUS reduce production qident -> IDENT 
-- On OR reduce production qident -> IDENT 
-- On NEQ reduce production qident -> IDENT 
-- On MOD reduce production qident -> IDENT 
-- On MINUS reduce production qident -> IDENT 
-- On LT reduce production qident -> IDENT 
-- On LPAREN reduce production qident -> IDENT 
-- On LEQ reduce production qident -> IDENT 
-- On INCR reduce production qident -> IDENT 
-- On IN reduce production qident -> IDENT 
-- On GT reduce production qident -> IDENT 
-- On GEQ reduce production qident -> IDENT 
-- On EQ reduce production qident -> IDENT 
-- On DOT reduce production qident -> IDENT 
-- On DIV reduce production qident -> IDENT 
-- On DECR reduce production qident -> IDENT 
-- On COMMA reduce production qident -> IDENT 
-- On ASSIGN reduce production qident -> IDENT 
-- On ARROW reduce production qident -> IDENT 
-- On AND reduce production qident -> IDENT 

State 48:
qvar -> ECOMM . qvar [ LPAREN ]
-- On TIMES shift to state 42
-- On TIDENT shift to state 43
-- On IDENT shift to state 47
-- On ECOMM shift to state 48
-- On qvar shift to state 49
-- On qident shift to state 50

State 49:
qvar -> ECOMM qvar . [ LPAREN ]
-- On LPAREN reduce production qvar -> ECOMM qvar 

State 50:
qvar -> qident . [ LPAREN ]
-- On LPAREN reduce production qvar -> qident 

State 51:
qvar -> TIMES qvar . [ LPAREN ]
-- On LPAREN reduce production qvar -> TIMES qvar 

State 52:
proto -> type_rule qvar . paren(separated_list(COMMA,argument)) [ SEMICOLON LBRACE ]
-- On LPAREN shift to state 7
-- On paren(separated_list(COMMA,argument)) shift to state 53

State 53:
proto -> type_rule qvar paren(separated_list(COMMA,argument)) . [ SEMICOLON LBRACE ]
-- On SEMICOLON reduce production proto -> type_rule qvar paren(separated_list(COMMA,argument)) 
-- On LBRACE reduce production proto -> type_rule qvar paren(separated_list(COMMA,argument)) 

State 54:
member -> VIRTUAL proto . SEMICOLON [ VOID VIRTUAL TINT TIDENT RBRACE ]
-- On SEMICOLON shift to state 55

State 55:
member -> VIRTUAL proto SEMICOLON . [ VOID VIRTUAL TINT TIDENT RBRACE ]
-- On VOID reduce production member -> VIRTUAL proto SEMICOLON 
-- On VIRTUAL reduce production member -> VIRTUAL proto SEMICOLON 
-- On TINT reduce production member -> VIRTUAL proto SEMICOLON 
-- On TIDENT reduce production member -> VIRTUAL proto SEMICOLON 
-- On RBRACE reduce production member -> VIRTUAL proto SEMICOLON 

State 56:
decl_vars -> type_rule . separated_nonempty_list(COMMA,var) SEMICOLON [ VOID VIRTUAL TINT TIDENT RBRACE EOF CLASS ]
proto -> type_rule . qvar paren(separated_list(COMMA,argument)) [ SEMICOLON LBRACE ]
-- On TIMES shift to state 57
-- On TIDENT shift to state 43
-- On IDENT shift to state 58
-- On ECOMM shift to state 59
-- On var shift to state 60
-- On separated_nonempty_list(COMMA,var) shift to state 63
-- On qvar shift to state 52
-- On qident shift to state 50

State 57:
qvar -> TIMES . qvar [ LPAREN ]
var -> TIMES . var [ SEMICOLON COMMA ]
-- On TIMES shift to state 57
-- On TIDENT shift to state 43
-- On IDENT shift to state 58
-- On ECOMM shift to state 59
-- On var shift to state 14
-- On qvar shift to state 51
-- On qident shift to state 50

State 58:
qident -> IDENT . [ LPAREN ]
var -> IDENT . [ SEMICOLON COMMA ]
-- On SEMICOLON reduce production var -> IDENT 
-- On LPAREN reduce production qident -> IDENT 
-- On COMMA reduce production var -> IDENT 

State 59:
qvar -> ECOMM . qvar [ LPAREN ]
var -> ECOMM . var [ SEMICOLON COMMA ]
-- On TIMES shift to state 57
-- On TIDENT shift to state 43
-- On IDENT shift to state 58
-- On ECOMM shift to state 59
-- On var shift to state 13
-- On qvar shift to state 49
-- On qident shift to state 50

State 60:
separated_nonempty_list(COMMA,var) -> var . [ SEMICOLON ]
separated_nonempty_list(COMMA,var) -> var . COMMA separated_nonempty_list(COMMA,var) [ SEMICOLON ]
-- On COMMA shift to state 61
-- On SEMICOLON reduce production separated_nonempty_list(COMMA,var) -> var 

State 61:
separated_nonempty_list(COMMA,var) -> var COMMA . separated_nonempty_list(COMMA,var) [ SEMICOLON ]
-- On TIMES shift to state 10
-- On IDENT shift to state 11
-- On ECOMM shift to state 12
-- On var shift to state 60
-- On separated_nonempty_list(COMMA,var) shift to state 62

State 62:
separated_nonempty_list(COMMA,var) -> var COMMA separated_nonempty_list(COMMA,var) . [ SEMICOLON ]
-- On SEMICOLON reduce production separated_nonempty_list(COMMA,var) -> var COMMA separated_nonempty_list(COMMA,var) 

State 63:
decl_vars -> type_rule separated_nonempty_list(COMMA,var) . SEMICOLON [ VOID VIRTUAL TINT TIDENT RBRACE EOF CLASS ]
-- On SEMICOLON shift to state 64

State 64:
decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON . [ VOID VIRTUAL TINT TIDENT RBRACE EOF CLASS ]
-- On VOID reduce production decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON 
-- On VIRTUAL reduce production decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON 
-- On TINT reduce production decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON 
-- On TIDENT reduce production decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON 
-- On RBRACE reduce production decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON 
-- On EOF reduce production decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON 
-- On CLASS reduce production decl_vars -> type_rule separated_nonempty_list(COMMA,var) SEMICOLON 

State 65:
member -> proto . SEMICOLON [ VOID VIRTUAL TINT TIDENT RBRACE ]
-- On SEMICOLON shift to state 66

State 66:
member -> proto SEMICOLON . [ VOID VIRTUAL TINT TIDENT RBRACE ]
-- On VOID reduce production member -> proto SEMICOLON 
-- On VIRTUAL reduce production member -> proto SEMICOLON 
-- On TINT reduce production member -> proto SEMICOLON 
-- On TIDENT reduce production member -> proto SEMICOLON 
-- On RBRACE reduce production member -> proto SEMICOLON 

State 67:
list(member) -> member . list(member) [ RBRACE ]
-- On VOID shift to state 4
-- On VIRTUAL shift to state 40
-- On TINT shift to state 5
-- On TIDENT shift to state 6
-- On type_rule shift to state 56
-- On proto shift to state 65
-- On member shift to state 67
-- On list(member) shift to state 68
-- On decl_vars shift to state 69
-- On RBRACE reduce production list(member) -> 

State 68:
list(member) -> member list(member) . [ RBRACE ]
-- On RBRACE reduce production list(member) -> member list(member) 

State 69:
member -> decl_vars . [ VOID VIRTUAL TINT TIDENT RBRACE ]
-- On VOID reduce production member -> decl_vars 
-- On VIRTUAL reduce production member -> decl_vars 
-- On TINT reduce production member -> decl_vars 
-- On TIDENT reduce production member -> decl_vars 
-- On RBRACE reduce production member -> decl_vars 

State 70:
decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) . RBRACE SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On RBRACE shift to state 71

State 71:
decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE . SEMICOLON [ VOID TINT TIDENT EOF CLASS ]
-- On SEMICOLON shift to state 72

State 72:
decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON . [ VOID TINT TIDENT EOF CLASS ]
-- On VOID reduce production decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON 
-- On TINT reduce production decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON 
-- On TIDENT reduce production decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON 
-- On EOF reduce production decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON 
-- On CLASS reduce production decl_class -> CLASS IDENT option(supers) LBRACE PUBLIC COLON list(member) RBRACE SEMICOLON 

State 73:
decl -> proto . bloc [ VOID TINT TIDENT EOF CLASS ]
-- On LBRACE shift to state 74
-- On bloc shift to state 194

State 74:
bloc -> LBRACE . list(instruction) RBRACE [ WHILE VOID TRUE TINT TIMES TIDENT THIS SEMICOLON RETURN RBRACE PLUS NULL NOT NEW MINUS LPAREN LBRACE INT INCR IF IDENT FOR FALSE EOF ELSE ECOMM DECR COUT CLASS ]
-- On WHILE shift to state 75
-- On VOID shift to state 4
-- On TRUE shift to state 77
-- On TINT shift to state 5
-- On TIMES shift to state 78
-- On TIDENT shift to state 146
-- On THIS shift to state 79
-- On SEMICOLON shift to state 147
-- On RETURN shift to state 148
-- On PLUS shift to state 80
-- On NULL shift to state 81
-- On NOT shift to state 82
-- On NEW shift to state 83
-- On MINUS shift to state 86
-- On LPAREN shift to state 76
-- On LBRACE shift to state 74
-- On INT shift to state 87
-- On INCR shift to state 88
-- On IF shift to state 152
-- On IDENT shift to state 47
-- On FOR shift to state 154
-- On FALSE shift to state 89
-- On ECOMM shift to state 90
-- On DECR shift to state 91
-- On COUT shift to state 162
-- On type_rule shift to state 170
-- On qident shift to state 92
-- On paren(expr) shift to state 93
-- On list(instruction) shift to state 190
-- On instruction shift to state 192
-- On expr shift to state 183
-- On bloc shift to state 185
-- On RBRACE reduce production list(instruction) -> 

State 75:
instruction -> WHILE . paren(expr) instruction [ WHILE VOID TRUE TINT TIMES TIDENT THIS SEMICOLON RETURN RBRACE PLUS NULL NOT NEW MINUS LPAREN LBRACE INT INCR IF IDENT FOR FALSE ELSE ECOMM DECR COUT ]
-- On LPAREN shift to state 76
-- On paren(expr) shift to state 145
